--- a/charts/pihole/values.yaml
+++ b/charts/pihole/values.yaml
@@ -372,7 +372,10 @@ adlists:
    - https://blocklistproject.github.io/Lists/porn.txt
 
 # -- list of whitelisted domains to import during initial start of the container
-whitelist: {}
+whitelist: 
+   - sdk.split.io  # Village Pizza 
+   - p.typekit.net # Village Pizza
+   - os.ss2.us
   # If you want to provide whitelisted domains, add them here.
   # - clients4.google.com
 
