--- a/charts/pihole/values.yaml
+++ b/charts/pihole/values.yaml
@@ -316,6 +316,7 @@ dnsmasq:
     - address=/nas.foulkes.cloud/192.168.50.3
     - address=/work.foulkes.cloud/192.168.50.35
     - address=/grafana.foulkes.cloud/192.168.50.24
+    - address=/squid.foulkes.cloud/192.168.50.26
   # - address=/bar.foo/192.168.178.11
 
   # -- Dnsmasq reads the /etc/hosts file to resolve ips. You can add additional entries if you like
