--- a/charts/pihole/values.yaml
+++ b/charts/pihole/values.yaml
@@ -51,7 +51,7 @@ serviceDns:
   externalTrafficPolicy: Local
 
   # -- A fixed `spec.loadBalancerIP` for the DNS Service
-  loadBalancerIP: "192.168.50.26"
+  loadBalancerIP: "192.168.50.24"
   # -- A fixed `spec.loadBalancerIP` for the IPv6 DNS Service
   loadBalancerIPv6: ""
 
@@ -80,7 +80,7 @@ serviceDhcp:
   externalTrafficPolicy: Local
 
   # -- A fixed `spec.loadBalancerIP` for the DHCP Service
-  loadBalancerIP: "192.168.50.23"
+  loadBalancerIP: "192.168.50.26"
   # -- A fixed `spec.loadBalancerIP` for the IPv6 DHCP Service
   loadBalancerIPv6: ""
 
@@ -122,7 +122,7 @@ serviceWeb:
   externalTrafficPolicy: Local
 
   # -- A fixed `spec.loadBalancerIP` for the web interface Service
-  loadBalancerIP: "192.168.50.27"
+  loadBalancerIP: "192.168.50.23"
   # -- A fixed `spec.loadBalancerIP` for the IPv6 web interface Service
   loadBalancerIPv6: ""
 
@@ -313,11 +313,12 @@ dnsmasq:
   # -- Add custom dns entries to override the dns resolution. All lines will be added to the pihole dnsmasq configuration.
   customDnsEntries:
     - address=/proxmox.foulkes.cloud/192.168.50.100
-    - address=/nas.foulkes.cloud/192.168.50.53
+    - address=/nas.foulkes.cloud/192.168.50.64
     - address=/work.foulkes.cloud/192.168.50.35
     - address=/grafana.foulkes.cloud/192.168.50.220
     - address=/squid.foulkes.cloud/192.168.50.23
-    - address=/torrent.foulkes.cloud/192.168.50.84
+    #- address=/torrent.foulkes.cloud/192.168.50.84
+    - address=/torrent.foulkes.cloud/192.168.50.52
     - address=/jelly.foulkes.cloud/192.168.50.52
   # - address=/bar.foo/192.168.178.11
 
