--- a/charts/pihole/values.yaml
+++ b/charts/pihole/values.yaml
@@ -319,6 +319,7 @@ dnsmasq:
     - address=/squid.foulkes.cloud/192.168.50.23
     #- address=/torrent.foulkes.cloud/192.168.50.84
     - address=/torrent.foulkes.cloud/192.168.50.52
+    - address=/search.foulkes.cloud/192.168.50.52
     - address=/jelly.foulkes.cloud/192.168.50.52
   # - address=/bar.foo/192.168.178.11
 
