update the TTL for dnsmaq values to avoid problems with throttling from proxy services.

--- a/charts/pihole/templates/configmap.yaml
+++ b/charts/pihole/templates/configmap.yaml
@@ -9,6 +9,7 @@ metadata:
     heritage: {{ .Release.Service }}
 data:
   02-custom.conf: |
+    local-ttl=3600
     addn-hosts=/etc/addn-hosts
   {{- range .Values.dnsmasq.upstreamServers }}
     {{ . }}
